---
source: src/load_folder_structure.rs
expression: folder
---
Ok(
    Folder {
        name: "analyze_file_contents",
        children: [
            Folder(
                Folder {
                    name: "dist",
                    children: [
                        FileChild(
                            File {
                                basename: "test",
                                name_with_ext: "test.js",
                                content: Some(
                                    "const value = 'test';\n",
                                ),
                                extension: Some(
                                    "js",
                                ),
                                relative_path: "./dist/test.js",
                            },
                        ),
                    ],
                },
            ),
            Folder(
                Folder {
                    name: "folder",
                    children: [
                        FileChild(
                            File {
                                basename: "test",
                                name_with_ext: "test.js",
                                content: Some(
                                    "export const test2 = () => {\n  console.log('test2');\n}\n",
                                ),
                                extension: Some(
                                    "js",
                                ),
                                relative_path: "./folder/test.js",
                            },
                        ),
                    ],
                },
            ),
            FileChild(
                File {
                    basename: "test",
                    name_with_ext: "test.md",
                    content: None,
                    extension: Some(
                        "md",
                    ),
                    relative_path: "./test.md",
                },
            ),
        ],
    },
)
